<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.ericalfonsoponce.rick_and_morty_app.ui.character.CharacterActivity" />

        <variable
            name="viewModel"
            type="com.ericalfonsoponce.rick_and_morty_app.ui.character.CharacterViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="@{() ->activity.onBackPressed() }"
                android:src="@drawable/ic_close"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.RoundedCorners" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_character"
                    android:layout_width="@dimen/character_height_size"
                    android:layout_height="@dimen/character_height_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/margin_large"
                    android:contentDescription="@null"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedCorners"
                    tools:src="@tools:sample/avatars" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/name_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@={viewModel.uiState.characterDetails.name}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="Random Name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/origin_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@={viewModel.uiState.characterDetails.origin}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="Earth C-137" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/location_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@={viewModel.uiState.characterDetails.location}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="Citadel of Ricks" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/gender_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/image_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:src="@drawable/ic_gender_unknown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/status_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@={viewModel.uiState.characterDetails.status}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="Alive"
                        tools:textColor="@color/green" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/species_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@={viewModel.uiState.characterDetails.species}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="Human" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>