<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.ericalfonsoponce.rick_and_morty_app.domain.model.Character" />

        <import type="com.ericalfonsoponce.rick_and_morty_app.helpers.extensions.StringKt" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_grey"
        app:cardCornerRadius="@dimen/corner_radius_regular"
        app:cardElevation="@dimen/elevation_regular"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_medium">

            <ImageView
                android:id="@+id/image_character"
                android:layout_width="match_parent"
                android:layout_height="@dimen/character_height_size"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/name_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_character" />

            <TextView
                android:id="@+id/text_name_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@={character.name}"
                app:layout_constraintBottom_toBottomOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_name"
                app:layout_constraintTop_toTopOf="@id/text_name"
                tools:text="Random Name" />


            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/gender_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name" />

            <ImageView
                android:id="@+id/image_gender"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginStart="@dimen/margin_small"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="@id/text_gender"
                app:layout_constraintStart_toEndOf="@id/text_gender"
                app:layout_constraintTop_toTopOf="@id/text_gender"
                tools:src="@drawable/ic_gender_unknown" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/status_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_gender" />

            <TextView
                android:id="@+id/text_status_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@{character.status}"
                app:layout_constraintBottom_toBottomOf="@id/text_status"
                app:layout_constraintStart_toEndOf="@id/text_status"
                app:layout_constraintTop_toTopOf="@id/text_status"
                tools:text="Alive" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>